--- a/beginners/service-defintitions/clusterip-definition.yml
+++ b/beginners/service-defintitions/clusterip-definition.yml
@@ -1,13 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: back-en
+  name: back-end
 spec:
   # Not compulsory, ClusterIP is the default type
   type: ClusterIP
   ports:
+    # the container exposed port
     - targetPort: 80
+    # the service exposed port
       port: 80
   selector:
     app: myapp
     type: back-end
+
+# ClusterIp is responsible for internal network communication. The services can be reached by name
