--- a/beginners/service-defintitions/nodeport-definition.yml
+++ b/beginners/service-defintitions/nodeport-definition.yml
@@ -5,9 +5,19 @@ metadata:
 spec:
   type: NodePort
   ports:
+    # pod port, default value is same as the port
     - targetPort: 80
+    # service port, mandatory
       port: 80
+    # node port :D, without defining a default value a free port allocated between 30000-32767
       nodePort: 30008
   selector:
     app: myapp
     type: front-end
+
+# Node port makes the pods available for end-users on a single address
+# The service should be available on the node address on the 30008 port
+# e.g.: http://192.168.1.2:30008
+# It distributes the requests on the selected (myapp, frontend) pods
+# If there is multiple nodes any of the addresses can be used
+# e.g.:  http://192.168.1.2:30008,  http://192.168.1.3:30008 with 2 nodes
