Add storageClassName to pv and pvc definitions

--- a/applicationDeveloper/volumes/pv-definition.yml
+++ b/applicationDeveloper/volumes/pv-definition.yml
@@ -6,9 +6,11 @@ spec:
   # it defines how a volume should mounted on hosts
   accessModes:
     - ReadWriteOnce
+    - ReadWriteMany
   capacity:
     storage: 1Gi
   # Not recommended on prod env, use provider specific solution like awsElasticBlockStore
   hostPath:
     path: /tmp/data
   persistentVolumeReclaimPolicy: Retain
+  storageClassName: manual
